After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771827 - stuck at "Pending.." when trying to install (maybe problematic) flatpakrepo file
stuck at "Pending.." when trying to install (maybe problematic) flatpakrepo file
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-09-22 12:06 UTC by Bastian Ilsø
Modified: 2016-09-23 09:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
flatpakrepo causing the behavior (1.71 KB, application/vnd.flatpak.repo)
2016-09-22 12:06 UTC, Bastian Ilsø
Details

Description Bastian Ilsø 2016-09-22 12:06:36 UTC
Created attachment 336078 [details]
flatpakrepo causing the behavior

when I attempt to install the attached flatpakrepo file and press "Install", gnome-software seems stuck at the "Pending" stage with no proper feedback of what is going on or why it's taking so long time. I recorded the behavior:

https://www.youtube.com/watch?v=1s8d9Ikz_Ag

I dont know the exact issue with this flatpakrepo file, but in any case i guess there's missing some timeout here and some error handling / feedback to the user.
Comment 1 Timm Bäder 2016-09-22 13:02:46 UTC
Probably worth noting that flatpak --user remote-add some-name --from=<filename> works with the attached .flatpakrepo file
Comment 2 Richard Hughes 2016-09-22 15:07:23 UTC
Was gnome-software process running before you double clicked the flatpakrepo file? If not, I think I've worked out the bug.
Comment 3 Richard Hughes 2016-09-22 15:24:41 UTC
This fixes it for me:

commit d411d65bedcee5bfc5fc2b53788b657a3e414f40
Author: Richard Hughes <richard@hughsie.com>
Date:   Thu Sep 22 16:23:49 2016 +0100

    Ensure the network is checked if starting gnome-software by opening a file
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=771827


Can you apply that, install it systemwide, killall gnome-software instances, then double click the file please. Thanks!
Comment 4 Timm Bäder 2016-09-22 15:38:06 UTC
Did you forget to push that commit or am I missing something?
Comment 5 Timm Bäder 2016-09-22 18:46:06 UTC
nvm, it's there now :)
Comment 6 Bastian Ilsø 2016-09-23 09:48:40 UTC
(In reply to Richard Hughes from comment #3)
> This fixes it for me:
> 
> commit d411d65bedcee5bfc5fc2b53788b657a3e414f40
> Author: Richard Hughes <richard@hughsie.com>
> Date:   Thu Sep 22 16:23:49 2016 +0100
> 
>     Ensure the network is checked if starting gnome-software by opening a
> file
>     
>     Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=771827
> 
> 
> Can you apply that, install it systemwide, killall gnome-software instances,
> then double click the file please. Thanks!

The corebird.flatpakrepo works now, i think you fixed it! thanks! :)
Comment 7 Bastian Ilsø 2016-09-23 09:49:24 UTC
oh i guess the error handling still isn't there though (should i keep the bug open?) (in cases where stuff can go wrong)