Ensure the network is checked if starting gnome-software by opening a file

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=771827